# practice_parsing

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
habr/loggers/: logger.py
habr/src/: habr_parser.py  parser.py  tg_parser.py
loggers/: __init__.py  logger.py  logging_config.py
models/: __init__.py  post_models.py
parsers/: comporator_config.py  content_comparator.py  content_comporator_bert.py  habr.json  similar_posts.xlsx  telegram.json
parsers/src/: __init__.py  habr_parser.py  habr_parser2.py  pikabu_parser.py  tg_parser.py
storage/: data_storage.py  storage_config.py
