[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["AssemblerBossss <nazarovmisa39@mail.ru>"]
readme = "README.md"
packages = [
  { include = "habr" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
fake-useragent = "^2.1.0"
dotenv = "^0.9.9"
telethon = "^1.39.0"
aiohttp = "^3.11.16"
lxml = "^5.3.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
