[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["AssemblerBossss <nazarovmisa39@mail.ru>"]
readme = "README.md"
packages = [
  { include = "habr" },
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.13.3"
fake-useragent = "^2.1.0"
dotenv = "^0.9.9"
telethon = "^1.39.0"
aiohttp = "^3.11.16"
lxml = "^5.3.1"
openpyxl = "^3.1.5"
torch = "^2.6.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
huggingface-hub = {extras = ["hf-xet"], version = "^0.30.2"}
tqdm = "^4.67.1"
sentence-transformers = "^4.1.0"
selenium = "^4.31.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
